SF Primes/src/objects/Competitors__c.object
<CustomObject>
    <description>List of competitors</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>3-Com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Computer Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alltel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Computer Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Virtual Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AtCom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aut@revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobase CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autocomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Flexilog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autopower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autosoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Trader/Vin Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BellSouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Vision Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comdial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conxsys</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Competitor__c</fullName>
        <label>Other Competitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Competitor</label>
    <nameField>
        <displayFormat>ID {00000}</displayFormat>
        <label>Competitor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Other_Competitor</fullName>
        <active>true</active>
        <description>If Other Competitor is selected the Other Competitor text field must be populated.</description>
        <errorConditionFormula>AND( ISPICKVAL( Competitor__c , &quot;Other (indicate in Comments box)&quot;) , LEN( Other_Competitor__c )=0 )</errorConditionFormula>
        <errorDisplayField>Other_Competitor__c</errorDisplayField>
        <errorMessage>Other Competitor is required.</errorMessage>
    </validationRules>
</CustomObject>